fixtures/errors/ambiguous_rules.hu
@use * from "helpers.hu"

inflection ambig for {tense, number} {
  requires stems: root

  [tense=present, _] -> `{root}s`
  [number=sg, _] -> `{root}ed`
  [tense=past, number=pl] -> `{root}ed`
}

entry broken {
  headword: "broken"
  tags: [parts_of_speech=verb]
  stems { root: "break" }
  inflection_class: ambig
  meaning: "to break"
}
